--- a/dev/sass/components/home/_services-cta.scss
+++ b/dev/sass/components/home/_services-cta.scss
@@ -19,6 +19,7 @@
       h2 {
         color: white;
         margin-bottom: 25px;
+        margin-top: 25px;
       }
 
 
@@ -51,7 +52,7 @@
 
           .service-button-wrapper {
             .service-button {
-              
+
               width: 50%;
               background-color: black;
               display: inline-block;
