--- a/dev/sass/styles.scss
+++ b/dev/sass/styles.scss
@@ -12,6 +12,15 @@ h1, h2, h3 {
   font-family: $font-headers;
 }
 
+a {
+
+  &:hover {
+    font-weight: bold;
+    text-decoration: none;
+    text-shadow: 1px 1px 2px rgba(150, 150, 150, 1);
+  }
+}
+
 
 /*
  * Override Bootstrap's default container.
